fixed navbar on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -48,7 +48,7 @@
 
 @font-face {
     font-family: 'IBM VGA';
-    src: url('/public/fonts/IBM_VGA_8x16.woff') format('woff');
+    src: url('/fonts/IBM_VGA_8x16.woff') format('woff');
     font-weight: 700; // Assuming IBM VGA is for headings/bold
     font-style: normal;
     font-display: swap;
@@ -56,7 +56,7 @@
 
 @font-face {
   font-family: 'VT323';
-  src: url('/public/fonts/VT323-Regular.ttf') format('ttf'); /* Or .ttf if you have that */
+  src: url('/fonts/VT323-Regular.ttf') format('ttf'); /* Or .ttf if you have that */
   font-weight: 400;
   font-style: normal;
   font-display: swap;
